--- a/Runs.ASAP.WHAM.Transition/run1/figures_tables.Rmd
+++ b/Runs.ASAP.WHAM.Transition/run1/figures_tables.Rmd
@@ -31,12 +31,11 @@ if(knitr::is_latex_output()) type = "latex"
 if(knitr::is_html_output()) type = "html"
 if(type == "latex") knitr::opts_chunk$set(out.width="100%")
 options(knitr.kable.NA = "--")
-library(knitr)
-library(tidyverse)
-library(pander)
-library(kableExtra)
-library(png)
-library(tinytex)
+#library(knitr)
+library(magrittr)
+#library(pander)
+#library(kableExtra)
+#library(tinytex)
 ```
 # {.tabset}
 
@@ -99,9 +98,9 @@ out = as.data.frame(readRDS("res_tables/parameter_estimates_table.RDS"))
 #out = round(out, 3)
 out <- sci_note(out,cols=1:4)
 
-out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T,label = "par-table",
+out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T,label = "par-table",
     caption="Parameter estimates, standard errors, and confidence intervals. Rounded to 3 decimal places.", align = c(rep("r",4))) %>%
-    kable_styling(latex_options=c("basic", "repeat_header")) %>% landscape()
+    kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) %>% kableExtra::landscape()
 cat(knitr::knit_print(out))
 
 input <- readRDS("res_tables/fit_input.RDS")
@@ -126,10 +125,10 @@ dat <- input$data
 for(s in 1:dat$n_stocks) for(r in 1:dat$n_regions){
   out = readRDS(paste0("res_tables/",stock.names.f[s], "_", region.names.f[r], "_NAA_table.RDS"))
   out = round(out, 0)
-  out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, 
+  out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, 
     label = paste0(stock.names.l[s], "-", region.names.l[r], "-NAA-table"), 
       caption=paste0("Abundance at age (1000s) for ", stock.names.tab[s], " in ", region.names.tab[r],".")) %>%
-      kable_styling(latex_options=c("basic", "repeat_header")) #%>%
+      kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) #%>%
   cat(knitr::knit_print(out))
 }
 ```
@@ -140,9 +139,9 @@ for(s in 1:dat$n_stocks) for(r in 1:dat$n_regions){
 for(r in 1:dat$n_regions){
   out = readRDS(paste0("res_tables/",region.names.f[r], "_FAA_tot_table.RDS"))
   out = round(out, 3)
-  out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(region.names.l[r], "-region-FAA-table"),
+  out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(region.names.l[r], "-region-FAA-table"),
       caption=paste0("Total fishing mortality at age in ", region.names.tab[r], ".")) %>%
-      kable_styling(latex_options=c("basic", "repeat_header")) #%>%
+      kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) #%>%
   cat(knitr::knit_print(out))
 }
 ```
@@ -153,9 +152,9 @@ for(r in 1:dat$n_regions){
 for(r in 1:dat$n_fleets){
   out = readRDS(paste0("res_tables/",fleet.names.f[r], "_FAA_table.RDS"))
   out = round(out, 3)
-  out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(fleet.names.l[r], "-fleet-FAA-table"),
+  out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(fleet.names.l[r], "-fleet-FAA-table"),
       caption=paste0("Total fishing mortality at age in ", fleet.names.tab[r], ".")) %>%
-      kable_styling(latex_options=c("basic", "repeat_header")) #%>%
+      kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) #%>%
   cat(knitr::knit_print(out))
 }
 ```
