--- a/Runs.ASAP.WHAM.Transition/run1/res_tables/par_tables.Rmd
+++ b/Runs.ASAP.WHAM.Transition/run1/res_tables/par_tables.Rmd
@@ -27,11 +27,10 @@ header-includes:
 ```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE, tidy=FALSE, tidy.opts=list(width.cutoff=60), warning = FALSE, message = FALSE, fig.align = "center")
 options(knitr.kable.NA = "--")
-library(knitr)
+#library(knitr)
 library(tidyverse)
-library(pander)
-library(kableExtra)
-library(png)
+#library(pander)
+#library(kableExtra)
 library(tinytex)
 ```
 <!--
@@ -66,9 +65,9 @@ out = as.data.frame(readRDS("parameter_estimates_table.RDS"))
 out <- sci_note(out,cols=1:4)
 # out = readRDS("parameter_estimates_table.RDS")
 # out = round(out, 3)
-out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T,label = "par-table",
+out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T,label = "par-table",
     caption="Parameter estimates, standard errors, and confidence intervals. Rounded to 3 decimal places.", align = c(rep("r",4))) %>%
-    kable_styling(latex_options=c("basic", "repeat_header")) %>% landscape()
+    kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) %>% kableExtra::landscape()
 cat(knitr::knit_print(out))
 
 input <- readRDS("fit_input.RDS")
@@ -93,10 +92,10 @@ dat <- input$data
 for(s in 1:dat$n_stocks) for(r in 1:dat$n_regions){
   out = readRDS(paste0(stock.names.f[s], "_", region.names.f[r], "_NAA_table.RDS"))
   out = round(out, 0)
-  out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, 
+  out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, 
     label = paste0(stock.names.l[s], "-", region.names.l[r], "-NAA-table"), 
       caption=paste0("Abundance at age (1000s) for ", stock.names.tab[s], " in ", region.names.tab[r],".")) %>%
-      kable_styling(latex_options=c("basic", "repeat_header")) #%>%
+      kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) #%>%
   cat(knitr::knit_print(out))
 }
 ```
@@ -107,9 +106,9 @@ for(s in 1:dat$n_stocks) for(r in 1:dat$n_regions){
 for(r in 1:dat$n_regions){
   out = readRDS(paste0(region.names.f[r], "_FAA_tot_table.RDS"))
   out = round(out, 3)
-  out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(region.names.l[r], "-region-FAA-table"),
+  out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(region.names.l[r], "-region-FAA-table"),
       caption=paste0("Total fishing mortality at age in ", region.names.tab[r], ".")) %>%
-      kable_styling(latex_options=c("basic", "repeat_header")) #%>%
+      kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) #%>%
   cat(knitr::knit_print(out))
 }
 ```
@@ -120,9 +119,9 @@ for(r in 1:dat$n_regions){
 for(r in 1:dat$n_fleets){
   out = readRDS(paste0(fleet.names.f[r], "_FAA_table.RDS"))
   out = round(out, 3)
-  out <- out %>% kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(fleet.names.l[r], "-fleet-FAA-table"),
+  out <- out %>% knitr::kable(format = type, booktabs = T, escape=F, longtable = T, row.names = T, label = paste0(fleet.names.l[r], "-fleet-FAA-table"),
       caption=paste0("Total fishing mortality at age in ", fleet.names.tab[r], ".")) %>%
-      kable_styling(latex_options=c("basic", "repeat_header")) #%>%
+      kableExtra::kable_styling(latex_options=c("basic", "repeat_header")) #%>%
   cat(knitr::knit_print(out))
 }
 ```
